# lp-hedging

./: README.md  pyproject.toml
dex_sim/: agents.py  constants.py  cpmm.py  price.py  tracker.py
scripts/: agent_sim.py  analytica_res.py  example.ipynb  sim.py  sim_wo_cost.py  simulation.py  simulation_w_cost.py  simulation_wo_cost.py
