[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "dex_sim"
version = "0.0.1" 
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "requests",
    "matplotlib",
    "seaborn",
    "codecov",
    "tqdm",
    "python-dotenv",
    "plotnine",
    "pandas-ta",
    "nbconvert",
    "notebook",
    "pathlib",
    "pyarrow",
]

[project.optional-dependencies]
dev = ["pylint"]